compiler/testData/diagnostics/tests/multiplatform/duplicateSupertype.fir.kt
// RUN_PIPELINE_TILL: BACKEND
// IGNORE_DEXING
// LANGUAGE: +MultiPlatformProjects

// MODULE: common

interface A {
    open fun foo() {}
}

expect interface B

<!CONFLICTING_INHERITED_JVM_DECLARATIONS, CONFLICTING_INHERITED_JVM_DECLARATIONS, CONFLICTING_INHERITED_JVM_DECLARATIONS, CONFLICTING_INHERITED_JVM_DECLARATIONS!>class C : A, B {}<!>

// MODULE: jvm()()(common)

actual typealias B = A
